// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadSourceTile matches the snapshot for the green tone 1`] = `
<KeyboardProvider>
  <View
    accessibilityLabel="Take a photo"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#F4F7F8",
        "borderColor": "#E1E6E8",
        "borderRadius": 18,
        "borderStyle": "dashed",
        "borderWidth": 3,
        "flex": 1,
        "padding": 21,
        "paddingHorizontal": 12,
        "paddingVertical": 24,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#E8F5E9",
          "borderRadius": 17,
          "height": 59,
          "justifyContent": "center",
          "marginBottom": 12,
          "width": 59,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={24}
        bbWidth={24}
        fill="none"
        focusable={false}
        height={24}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 24,
              "width": 24,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={24}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4279509309,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          >
            <RNSVGPath
              d="M23 19a2 2 0 01-2 2H3a2 2 0 01-2-2V8a2 2 0 012-2h4l2-3h6l2 3h4a2 2 0 012 2z"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            />
            <RNSVGCircle
              cx="12"
              cy="13"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              r="4"
            />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <Text
      maxFontSizeMultiplier={1.3}
      style={
        {
          "color": "#002B49",
          "fontFamily": "Figtree_600SemiBold",
          "fontSize": 18,
          "fontWeight": "600",
          "textAlign": "center",
        }
      }
    >
      Take a photo
    </Text>
  </View>
</KeyboardProvider>
`;

exports[`UploadSourceTile matches the snapshot for the teal tone 1`] = `
<KeyboardProvider>
  <View
    accessibilityLabel="Take a photo"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#F4F7F8",
        "borderColor": "#E1E6E8",
        "borderRadius": 18,
        "borderStyle": "dashed",
        "borderWidth": 3,
        "flex": 1,
        "padding": 21,
        "paddingHorizontal": 12,
        "paddingVertical": 24,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#E0F4F7",
          "borderRadius": 17,
          "height": 59,
          "justifyContent": "center",
          "marginBottom": 12,
          "width": 59,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={24}
        bbWidth={24}
        fill="none"
        focusable={false}
        height={24}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 24,
              "width": 24,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={24}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4279509309,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          >
            <RNSVGPath
              d="M23 19a2 2 0 01-2 2H3a2 2 0 01-2-2V8a2 2 0 012-2h4l2-3h6l2 3h4a2 2 0 012 2z"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            />
            <RNSVGCircle
              cx="12"
              cy="13"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              r="4"
            />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <Text
      maxFontSizeMultiplier={1.3}
      style={
        {
          "color": "#002B49",
          "fontFamily": "Figtree_600SemiBold",
          "fontSize": 18,
          "fontWeight": "600",
          "textAlign": "center",
        }
      }
    >
      Take a photo
    </Text>
  </View>
</KeyboardProvider>
`;
